Updated index.html file

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>This is a Sample Webpage for Demo</h1>
+<p>It is hosted on docker container 140.211.10.108 on port 8081</p>
 
 </body>
 </html>
